--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body {
   height: 100vh;
   margin: 0;
   display: block;
-  background-image: url("images/fodlan.webp");
+  background-image: url("images/fodlan.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
 }
@@ -202,3 +202,4 @@ p {
     }
   }
 }
+
